# theory-project

./: BUILD_INSTRUCTIONS.md  CMakeLists.txt  CompilerProject.pro  ML_TRANSLATION_FEATURE.md
ml_translator/: __init__.py
ml_translator/models/: codegen_model.py
ml_translator/postprocessing/: formatter.py
ml_translator/preprocessing/: __init__.py  tokenizer.py
models/Automaton/: Automaton.h  State.h  Transition.cpp  Transition.h
models/Grammar/: Grammar.h  ParseTree.cpp  ParseTree.h  Production.cpp
models/LexicalAnalysis/: Token.cpp  Token.h
models/Semantic/: SymbolTable.cpp  SymbolTable.h
src/: main.cpp
src/ml_translator/: README.md  app.py  config.py  requirements.txt  start_server.py
src/ml_translator/models/: __init__.py  base_model.py  codegen_model.py
src/ml_translator/postprocessing/: __init__.py  validator.py
src/ml_translator/preprocessing/: ast_processor.py  tokenizer.py
src/models/Automaton/: Automaton.cpp  State.cpp
src/models/Grammar/: Grammar.cpp  Production.h
src/ui/Grammar/: ParserWidget.cpp
src/ui/LexicalAnalysis/: LexerWidget.h
src/ui/Semantic/: SemanticAnalyzerWidget.cpp
src/utils/Automaton/: NFAtoDFA.cpp
src/utils/Grammar/: Parser.h
src/utils/LexicalAnalysis/: AutomatonManager.h  Lexer.h
src/utils/Semantic/: MLTranslationBridge.cpp  MLTranslationBridge.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SemanticError.h
ui/: MainWindow.cpp  MainWindow.h
ui/Automaton/: AutomatonCanvas.cpp  AutomatonCanvas.h
ui/Grammar/: ParseTreeWidget.cpp  ParseTreeWidget.h  ParserWidget.h
ui/LexicalAnalysis/: LexerWidget.cpp
ui/Semantic/: SemanticAnalyzerWidget.cpp  SemanticAnalyzerWidget.h
utils/Automaton/: DFAMinimizer.cpp  DFAMinimizer.h  NFAtoDFA.h
utils/Grammar/: Parser.cpp
utils/LexicalAnalysis/: AutomatonManager.cpp  Lexer.cpp
utils/Semantic/: CodeGenerator.cpp  CodeGenerator.h  SemanticError.cpp
